I updated the Transparent Nav to have a back to transparent gradient on it always to make sure there is enough contrast with every pages content

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6336,7 +6336,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .transparent-nav {
-  background: transparent;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), transparent);
   position: fixed;
   width: 100%;
   z-index: 10;
